--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -6,22 +6,22 @@ services:
       context: .
     restart: always
     volumes:
-    - static-data:/vol/web
+      - static-data:/vol/web
     environment:
       - DB_HOST=db
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
       - SECRET_KEY=${DJANGO_SECRET_KEY}
-      - ALLOWED_HOSTS${DJANGO_ALLOWED_HOSTS}
+      - ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
     depends_on:
-    - db
+      - db
 
   db:
     image: postgres:13-alpine
     restart: always
     volumes:
-      - postgres-data:/var/lib/postgres/data
+      - postgres-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
@@ -36,9 +36,8 @@ services:
     ports:
       - 80:8000
     volumes:
-      - static-date:/vol/static
+      - static-data:/vol/static
 
-  volumes:
-    postgres-data:
-    static-data:
-
+volumes:
+  postgres-data:
+  static-data:
