--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
       - DB_HOST=db
       - DB_NAME=devdb
       - DB_USER=devuser
-      - DB_PASS=mypassword
+      - DB_PASS=changeme
+      - DEBUG=1
     depends_on:
       - db
 
@@ -30,9 +31,7 @@ services:
     environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
-      - POSTGRES_PASSWORD=mypassword
-
-
+      - POSTGRES_PASSWORD=changeme
 
 volumes:
   dev-db-data:
